sassi-macros/tests/lihaaf/compile_fail/cacheable_non_monotonic_watermark_field.stderr
error[E0277]: the trait bound `bool: MonotonicWatermark` is not satisfied
  --> $DIR/cacheable_non_monotonic_watermark_field.rs:9:11
   |
 9 |     flag: bool,
   |           ^^^^ the trait `MonotonicWatermark` is not implemented for `bool`
   |
   = help: the following other types implement trait `MonotonicWatermark`:
             (A, B)
             (A, B, C)
             (A, B, C, D)
             SystemTime
             i128
             i16
             i32
             i64
           and 8 others
note: required by a bound in `sassi::DeltaSyncCacheable::Watermark`
  --> sassi/src/watermark.rs:81:21
   |
81 |     type Watermark: MonotonicWatermark;
   |                     ^^^^^^^^^^^^^^^^^^ required by this bound in `DeltaSyncCacheable::Watermark`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
